tests/ui/consts/issue-68542-closure-in-array-len.stderr
error[E0015]: cannot call non-const closure in constants
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^
   |
   = note: closures need an RFC before allowed to be called in constants
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
